[package]
name = "netsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
log = { version = "0.4", features = [ "std", "serde" ] }
serde = { version = "1.0", features = [ "derive"] }
toml = "0.5"