[package]
name = "netsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "3.0", features = [ "derive" ] }
lazy_static = "1.4"
log = { version = "0.4", features = [ "std", "serde" ] }
rand = { version = "0.8", features = [ "small_rng"] }
serde = { version = "1.0", features = [ "derive"] }
toml = "0.5"